--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,30 @@ p {
   color: var(--text-primary);
 }
 
+body {
+  position: "relative";
+  background-color: rgba(56, 17, 94, 0.841);
+}
+
+main {
+  background-color: rgba(56, 17, 94, 0.841);
+  min-height: 100vh;
+}
+
+body::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("/bg.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
+}
+
 .MuiOutlinedInput-notchedOutline {
   border-color: var(--text-primary) !important;
 }
